# client

./: .craft.ini  .craft.shelf  CHANGELOG.md  CMakeLists.txt  OWNCLOUD.cmake  THEME.cmake  VERSION.cmake  config.h.in  core_theme.qrc
cmake/modules/: OCBundleResources.cmake
shell_integration/dolphin/: ownclouddolphinoverlayplugin.json  ownclouddolphinpluginhelper.cpp  ownclouddolphinpluginhelper.h
shell_integration/nautilus/: setappname.sh
shell_integration/windows/: WinShellExtConstants.h.in  WinShellExtConstants.wxi.in
shell_integration/windows/FMContextMenu/: CMakeLists.txt
shell_integration/windows/FMOverlays/: CMakeLists.txt
shell_integration/windows/OCContextMenu/: OCContextMenu.rc  dllmain.cpp
shell_integration/windows/OCOverlays/: CMakeLists.txt  DllMain.cpp  OCOverlay.rc  OverlayConstants.h
shell_integration/windows/OCUtil/: OCUtil.rc
src/: CMakeLists.txt
src/common/: syncjournaldb.cpp  vfs.cpp  vfs.h
src/filesfm/: CMakeLists.txt  api.cpp  api.h  api_file_actions.cpp  commands.cpp  commands.h  debug.h  file_action.h  files.cpp  files.h  filesfm.cpp  filesfm.fwd.h  filesfm.h  folder.cpp  folder.h  folders.cpp  folders.h  helpers.cpp  helpers.h  logger.cpp  logger.h  logs.cpp  logs.h  messaging.cpp  messaging.h  request.cpp  request.h  requestparameter.cpp  requestparameter.h  shell_extensions.cpp  shell_extensions.h  unlock_message.h
src/filesfm/filewatcher/: callbackinterface.h  file.cpp  file.h  filewatcher.cpp  filewatcher.h  filewatcher_run.cpp  helpers.cpp  helpers.h  process.cpp  process.h  systemhandles.h
src/filesfm/include/: filesfm.h  filesfm_datehelper.h
src/gui/: aboutdialog.ui  accountsettings.cpp  accountsettings.h  accountstate.h  activitywidget.cpp  folder.cpp  folder.h  folderman.cpp  folderman.h  folderstatusdelegate.h  folderstatusmodel.cpp  folderstatusmodel.h  generalsettings.cpp  logbrowser.cpp  navigationpanehelper.cpp  owncloudgui.cpp  owncloudsetupwizard.cpp  selectivesyncdialog.cpp  settingsdialog.cpp  settingsdialog.h  sharedialog.cpp  sslbutton.cpp
src/gui/creds/: httpcredentialsgui.cpp
src/gui/models/: protocolitemmodel.cpp
src/gui/newwizard/pages/: basiccredentialssetupwizardpage.ui
src/gui/socketapi/: CMakeLists.txt  getJson.cpp  getJson.h  socketapi.cpp  socketapi.h  socketuploadjob.cpp
src/gui/wizard/: owncloudadvancedsetuppage.cpp  owncloudadvancedsetuppage.ui  owncloudhttpcredspage.cpp
src/libsync/: abstractnetworkjob.cpp  abstractnetworkjob.h  discoveryphase.cpp  networkjobs.cpp  progressdispatcher.h  propagatedownload.cpp  propagateremotemkdir.cpp  propagateupload.cpp  propagateuploadtus.cpp  syncengine.cpp  theme.cpp  theme.h
src/libsync/creds/: oauth.cpp
src/libsync/vfs/cfapi/: CMakeLists.txt
src/libsync/vfs/suffix/: vfs_suffix.cpp  vfs_suffix.h
src/libsync/vfs/win/: CMakeLists.txt  vfs_cfapi.h  (+4 more)
src/libsync/vfs/wincfapi/: CMakeLists.txt  cfapiwrapper.h  hydrationjob.cpp
test/: testsynccfapi.cpp
